nivasa-macros/tests/trybuild/controller_trailing_args_invalid.rs
use nivasa_macros::controller;

#[controller("/users", version = "1", extra = "2")]
struct UsersController;

fn main() {}
